--- a/install
+++ b/install
@@ -1,7 +1,7 @@
 #!/bin/sh
 # install helper
 
-which bash bspwm sxhkd feh xrdb xcompmgr polybar nvim vim tmux stow 1>/dev/null
+which bash bspwm sxhkd feh xrdb xcompmgr polybar nvim vim tmux stow scrot 1>/dev/null
 
 if [ $? -ne 0 ]; then
     echo "Missing some programs. Please install them before proceeding."
